--- a/README.adoc
+++ b/README.adoc
@@ -216,7 +216,7 @@ include::finish/inventory/src/main/liberty/config/server.xml[]
 ----
 
 InventoryResource.java
-[source, Java, linenums, role='code_column hide_tags=copyright hide_tags=mpRetry hide_tags=fallback hide_tags=fallbackMethod']
+[source, Java, linenums, role='code_column hide_tags=copyright,mpRetry,fallback,fallbackMethod']
 ----
 include::finish/inventory/src/main/java/io/openliberty/guides/inventory/InventoryResource.java[]
 ----
@@ -239,7 +239,7 @@ Add the [hotspot=mpRetry file=0]`@Retry` annotation before the [hotspot=getPrope
 to retry the service request a maximum of 3 times, only when an [hotspot=webApplicationException file=0]`WebApplicationException` occurs.
 
 InventoryResource.java
-[source, Java, linenums, role='code_column hide_tags=copyright hide_tags=fallback hide_tags=fallbackMethod']
+[source, Java, linenums, role='code_column hide_tags=copyright,fallback,fallbackMethod']
 ----
 include::finish/inventory/src/main/java/io/openliberty/guides/inventory/InventoryResource.java[]
 ----
