--- a/README.adoc
+++ b/README.adoc
@@ -22,6 +22,7 @@
 :page-seo-title: Building resilient microservices using MicroProfile and Istio Fault Tolerance
 :page-seo-description: A tutorial on MicroProfile Fault Tolerance integrated with Istio Fault Tolerance 
 and an example on how to develop fault-tolerance microservices using Istio's Retry policy and MicroProfile Fault Tolerance's Fallback mechanism.
+:guide-author: Open Liberty
 = Developing fault-tolerant microservices with Istio Retry and MicroProfile Fallback
 
 [.hidden]
