--- a/README.adoc
+++ b/README.adoc
@@ -347,7 +347,10 @@ system-deployment        1/1       1            1           1m
 
 You will make a request to the `system` service from the `inventory` service to access the 
 JVM system properties of your running container. The Istio [hotspot=gateway file=0]`gateway` is the entry point for HTTP requests to the cluster. 
-The `Host` header of your `system` service and `inventory` service has a value of `system.example.com` and `inventory.example.com`, respectively. 
+As defined in the [hotspot file=0]`services.yaml` file, the gateway is expecting the 
+`Host` header of your `system` service and `inventory` service to be `system.example.com` and `inventory.example.com`, respectively. 
+However, requests to `system.example.com` and `inventory.example.com` won’t be routed to the appropriate IP address. 
+To ensure that the gateway routes your requests appropriately, ensure that the `Host` header is set appropriately.
 You can set the `Host` header with the `-H` option of the `curl` command.
 
 services.yaml
@@ -641,11 +644,12 @@ you can turn off MicroProfile Fault Tolerance via a property to avoid any overla
 
 MicroProfile Fault Tolerance offers a config property `MP_Fault_Tolerance_NonFallback_Enabled` that disables all 
 MicroProfile Fault Tolerance capabilities except fallback. If `MP_Fault_Tolerance_NonFallback_Enabled` is set to false, all of the 
-specified MicroProfile annotations, including `@Retry`, won't take effect and only keep `@Fallback` available to use.
+behaviours specified by the MicroProfile Fault Tolerance annotations, including `@Retry`, won't take effect except for the `@Fallback` behaviour.
 
 You will define the `MP_Fault_Tolerance_NonFallback_Enabled` config property in a ConfigMap.
 ConfigMaps store configuration settings about a Kubernetes pod. This configuration needs to be loaded into the pod as an environment variable to be 
-used by the pod's containers. The environment variables are defined in the pod's specification using the `envFrom` field. 
+used by the pod's containers. The environment variables are defined in the pod's specification using the `envFrom` field. To learn more about ConfigMaps,
+check out the https://openliberty.io/guides/kubernetes-microprofile-config.html[Configuring microservices running in Kubernetes^] guide.
 
 You will use the `MP_Fault_Tolerance_NonFallback_Enabled` config property to disable the retries performed by MicroProfile, 
 to only allow Istio to perform the retries. 
