addressed dev content 3

--- a/README.adoc
+++ b/README.adoc
@@ -562,7 +562,9 @@ kubectl replace --force -f traffic.yaml
 ```
 
 Wait until all of your deployments are ready and available.
-Pause the `system` service pod to simulate that the service is unavailable:
+The `[system-pod-name]` will be regenerated and is different than the previous one you have been using.
+Run the `kubectl get pods` command to get the new `[system-pod-name]`.
+Pause the `system` service pod to simulate that the service is unavailable.
 
 [role=command]
 ```
@@ -682,6 +684,8 @@ kubectl replace --force -f services.yaml
 ```
 
 Wait until all of your deployments are ready and available.
+The `[system-pod-name]` will be regenerated and is different than the previous one you have been using.
+Run the `kubectl get pods` command to get the new `[system-pod-name]`.
 Pause the `system` service pod to simulate that the service is unavailable:
 
 [role=command]
@@ -816,6 +820,8 @@ kubectl replace --force -f traffic.yaml
 ```
 
 Wait until all of your deployments are ready and available.
+The `[system-pod-name]` will be regenerated and is different than the previous one you have been using.
+Run the `kubectl get pods` command to get the new `[system-pod-name]`.
 Pause the `system` service pod to simulate that the service is unavailable:
 
 [role=command]
